Renamed Hook -> Event, the API terminology
Applied this to class names, package names, and comments

Cherrypicked air & combo attacks merging from 1.20.1, authored by @Forixaim